fixed bag styles h1,p {   margin: 1em auto;   text-align: center; }

--- a/freecodecamp/learn_HTMLplusCSS/Learn_HTML_Forms_by_Building_a_Registration_Form/styles.css
+++ b/freecodecamp/learn_HTMLplusCSS/Learn_HTML_Forms_by_Building_a_Registration_Form/styles.css
@@ -6,6 +6,9 @@ body {
   margin: 0;
   background-color: #1b1b32;
   color: #f5f6f7;
+}
+
+h1,p {
   margin: 1em auto;
   text-align: center;
 }
